feat#7 : 마이페이지 API / 2 최근 본 테스트 기능 구현